<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/workout_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"/>

            <ImageButton
                android:id="@+id/workout_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text ="@string/workout_title_label"/>

            <EditText
                android:id="@+id/workout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workout_title_hint"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_detail_label"/>

    <Button
        android:id="@+id/workout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/workout_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_duration"
        android:gravity="left"/>

    <Button
        android:id="@+id/workout_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_distance"
        android:gravity="left"/>

    <CheckBox
        android:id="@+id/workout_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_completed_label"
        android:padding="20dp"/>

    <Button
        android:id="@+id/workout_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_client_text" />

    <Button
        android:id="@+id/workout_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_report_text" />
</LinearLayout>